Fix table spacing and ellipsis (#156)
Fix table column spacing and width in all pages
Fix ellipsis classes in table columns in all pages
Fix vertical alignment in tables
Fix DNS Records location in Side Menu component

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -527,11 +527,3 @@ $color-light: hsl(0, 0%, 96%);
   max-width: 450px;
   min-width: 300px;
 }
-
-.vertical-align-middle {
-  vertical-align: middle;
-}
-
-.vertical-align-top {
-  vertical-align: top;
-}
